--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "vite-express": "^0.21.1",
     "wouter": "^3.3.5",
     "zod": "^4.1.12"
   },
